# nbimplot

./: .gitignore  404.html  LICENSE  README.md  index.html  index.txt  next.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
.openai/: hosting.json
404/: index.html
_next/static/chunks/: 255-18fe816aaf958c6b.js  main-29e8e80d538cd525.js  main-app-71fc97c1aef85a98.js  webpack-d00d6efd3239a1c0.js
_next/static/chunks/app/: layout-cb7d7194ec308bd7.js  layout-cca492a3ba4b2960.js  page-140ead393d2f4493.js  page-c6ec4375a990be65.js
_next/static/chunks/app/_not-found/: page-b177b9717582186e.js
_next/static/css/: 52108464e618a136.css  a69b844e1575528b.css
_next/static/uFyg0h5jqHbeEv5OKNdSE/: _buildManifest.js
app/: DemoLoader.jsx  layout.jsx  page.jsx  styles.css
docs/: EXAMPLES.md  FAST_JUPYTER_PLOTTING.md  MILLION_POINT_NOTEBOOK_PLOTTING.md  POSITIONING.md  WEB.md  WEBAPP_INTEGRATION.md
nbimplot/: __init__.py  _frontend.js  _plot.py
nbimplot/wasm/: README.md
notebooks/: nbimplot_api_gallery.ipynb  nbimplot_benchmarks.ipynb  nbimplot_colab_complete.ipynb  nbimplot_examples.ipynb
public/: demo.js  llms-full.txt  llms.txt  robots.txt  sitemap.xml
scripts/: build_wasm.sh
tests/: test_plot.py
wasm/: CMakeLists.txt
wasm/core/: nbimplot_core.cpp  nbimplot_imgui_config.h  nbimplot_implot_layer.cpp  nbimplot_implot_layer.h
