[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nbimplot"
version = "0.1.10"
description = "ImPlot-powered WASM plotting for fast interactive Jupyter and web visualizations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nbimplot contributors" }]
dependencies = [
  "anywidget>=0.9.21",
  "ipywidgets>=8.1.0",
  "numpy>=1.24",
  "traitlets>=5.14",
]
keywords = ["jupyter", "plotting", "implot", "imgui", "wasm", "webgl", "webgl2", "widgets", "visualization", "large-data", "time-series", "notebooks", "scientific-visualization"]
classifiers = [
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://prinkesh.github.io/nbimplot/"
Documentation = "https://github.com/Prinkesh/nbimplot#readme"
Repository = "https://github.com/Prinkesh/nbimplot"
Issues = "https://github.com/Prinkesh/nbimplot/issues"
Changelog = "https://github.com/Prinkesh/nbimplot/releases"
Demo = "https://prinkesh.github.io/nbimplot/"
"Source Code" = "https://github.com/Prinkesh/nbimplot"
"Notebook Examples" = "https://github.com/Prinkesh/nbimplot/tree/main/notebooks"
"Web Package" = "https://www.npmjs.com/package/@nbimplot/web"
"LLM Documentation" = "https://prinkesh.github.io/nbimplot/llms-full.txt"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["nbimplot"]

[tool.hatch.build.targets.wheel.force-include]
"nbimplot/wasm/nbimplot_wasm.js" = "nbimplot/wasm/nbimplot_wasm.js"
"nbimplot/wasm/nbimplot_wasm.wasm" = "nbimplot/wasm/nbimplot_wasm.wasm"

[tool.hatch.build]
include = [
  "nbimplot/*.py",
  "nbimplot/*.js",
  "nbimplot/wasm/*.js",
  "nbimplot/wasm/*.wasm",
]
artifacts = [
  "nbimplot/wasm/*.js",
  "nbimplot/wasm/*.wasm",
]
